tests/typecheck/fail/interpolation_missing_to_string.tw
type Point = .{ x: Int, y: Int }

fn render_point() String {
    p := Point.{ x: 1, y: 2 }
    "${p}"
}
